--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     "test": "vitest ."
   },
   "devDependencies": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "npm:rolldown-vite@7.2.5",
+    "vitest": "^4.0.17"
   },
   "pnpm": {
     "overrides": {
       "vite": "npm:rolldown-vite@7.2.5"
     }
-  },
-  "dependencies": {
-    "vitest": "^4.0.17"
   }
 }
